src/test/ui/issues/issue-27078.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-27078.rs:5:12
   |
LL |     fn foo(self) -> &'static i32 {
   |            ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = help: consider adding a `where Self: std::marker::Sized` bound
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
